--- a/share/generic.conf
+++ b/share/generic.conf
@@ -11,12 +11,16 @@ server.reverse_dns = False
 server.thread_pool = 10
 server.environment = "development"
 
-session_filter.on = True
+tools.sessions.on = True
+tools.encode.encoding = "utf-8"
+tools.decode.on = True
+tools.encode.on = True
 
 molotov.charset = "utf-8"
 molotov.cocktails.wiki.helpdir = "%(molotov_prefix)s/doc/wiki-help"
 
 [/static]
+tools.staticdir.on = True
+tools.staticdir.root = "%(molotov_prefix)s/share"
+tools.staticdir.dir = "static"
 
-static_filter.on = True
-static_filter.dir = "%(molotov_prefix)s/share/static"
