Output type for template serialization.

--- a/share/generic.conf
+++ b/share/generic.conf
@@ -16,6 +16,7 @@ tools.encode.encoding = "utf-8"
 tools.decode.on = True
 tools.encode.on = True
 
+molotov.output = "html"
 molotov.charset = "utf-8"
 molotov.cocktails.wiki.helpdir = "%(molotov_prefix)s/doc/wiki-help"
 
