New NXPanel cocktail for hosting support (used by next-touch.com). Captcha mechanism introduced. Blog comments can now be deleted.

--- a/share/generic.conf
+++ b/share/generic.conf
@@ -25,3 +25,7 @@ tools.staticdir.on = True
 tools.staticdir.root = "%(molotov_prefix)s/share"
 tools.staticdir.dir = "static"
 
+[/ustatic]
+tools.staticdir.on = True
+tools.staticdir.root = "%(molotov_cwd)s/"
+tools.staticdir.dir = "ustatic"
